--- a/.github/workflows/check_pull_request.yml
+++ b/.github/workflows/check_pull_request.yml
@@ -2,11 +2,21 @@ name: Check pull request
 
 on: [ pull_request ]
 
+
+permissions:
+  statuses: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set commit status as pending
+        uses: myrotvorets/set-commit-status-action@master
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          status: pending
+          context: Publish NPM package
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -17,6 +27,10 @@ jobs:
         run: chmod +x ./gradlew
       - name: Build with Gradle
         run: ./gradlew build
-      - uses: ouzi-dev/commit-status-updater@v1.1.0
+      - name: Set final commit status
+        uses: myrotvorets/set-commit-status-action@master
+        if: always()
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
+          context: Publish NPM package
