--- a/.github/workflows/check_pull_request.yml
+++ b/.github/workflows/check_pull_request.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: pending
-          context: Publish NPM package
+          context: Check pull request
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
@@ -26,10 +26,11 @@ jobs:
       - name: Change wrapper permissions
         run: chmod +x ./gradlew
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
       - name: Set final commit status
         uses: myrotvorets/set-commit-status-action@master
         if: always()
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           status: ${{ job.status }}
+          context: Check pull request
