Change command framework to cloud from lamp.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,17 @@
 [versions]
 paper = "1.21-R0.1-SNAPSHOT"
-lamp = "3.2.1"
 koinVersion = "3.5.6"
 mccoroutine = "2.18.0"
 coroutine = "1.8.1"
 serialization = "1.7.1"
+cloud = "2.0.0-rc.2"
+cloudPaper = "2.0.0-beta.8"
 
 [libraries]
 paper-api = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
-lamp-common = { group = "com.github.Revxrsal.Lamp", name = "common", version.ref = "lamp" }
-lamp-bukkit = { group = "com.github.Revxrsal.Lamp", name = "bukkit", version.ref = "lamp" }
+cloud = { module = "org.incendo:cloud-core", version.ref = "cloud" }
+cloud-annotations = { module = "org.incendo:cloud-annotations", version.ref = "cloud" }
+cloudPaper = { module = "org.incendo:cloud-paper", version.ref = "cloudPaper" }
 serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "coroutine" }
 mccoroutine-bukkit-api = { group = "com.github.shynixn.mccoroutine", name = "mccoroutine-bukkit-api", version.ref = "mccoroutine" }
@@ -25,5 +27,5 @@ kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", versi
 dokka = { id = "org.jetbrains.dokka", version = "1.9.20" }
 
 [bundles]
-commands = ["lamp-common", "lamp-bukkit"]
+commands = ["cloud", "cloudPaper", "cloud-annotations"]
 coroutines = ["mccoroutine-bukkit-api", "mccoroutine-bukkit-core" , "kotlinx-coroutines-core"]
